refactor: 重構專案架構並實作樣式變體系統
主要變更：
- 重新組織專案結構，按收件對象分類：
  * mall_customer/ - 買家郵件模板（賣家寄送給買家）
  * mall_seller/ - 賣家郵件模板（平台寄送給賣家）
  * system/ - 系統相關郵件

- 實作三種樣式變體：
  * 變體一：橫向品牌 Logo（卡片外上方）- 用於賣家郵件
  * 變體二：Banner 圖片（卡片內）- 用於歡迎郵件
  * 變體三：動態品牌 Logo/名稱（卡片外上方，條件顯示）- 用於買家郵件

- 買家郵件模板調整：
  * 移除平台商（好嗨商）Logo 和品牌資訊
  * 使用動態賣家資訊（Thymeleaf 變數）
  * 調整為賣家直接與買家溝通的口吻
  * 客服資訊改為賣家聯絡方式

- 賣家郵件模板：
  * 統一加入客服資訊區塊
  * 使用變體一樣式格式

- 新增樣式指南：
  * mall_seller/STYLE_GUIDE.md - 完整的樣式規範文檔

- 更新 README.md：
  * 反映新的專案架構
  * 說明三種樣式變體的適用場景
  * 更新使用方式和 Thymeleaf 變數說明

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,15 @@
 .DS_Store
 **/.DS_Store
 
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 /git-stats-by-author.sh
+/internal_test/
+/STYLE_GUIDE.md
+
+mall_seller/STYLE_GUIDE.md
+.cursorrules
